More makefile cleanup

--- a/models.echoprime/Makefile
+++ b/models.echoprime/Makefile
@@ -25,10 +25,12 @@ help:
 	@echo "  make init               Setup Poetry environment"
 	@echo "  make download-weights   Download model weights and embeddings"
 	@echo ""
-	@echo "${GREEN}Run Commands:${NC}"
+	@echo "${GREEN}Inference Commands:${NC}"
 	@echo "  make inference          Run inference on all folders in raw_data/ directory"
-	@echo "  make train              Run model training"
 	@echo "  make visualize          Create comprehensive result visualizations"
+	@echo ""
+	@echo "${GREEN}Training Commands:${NC}"
+	@echo "  make train              Run model training on training_data/ directory"
 	@echo ""
 	@echo "${GREEN}Docker Commands:${NC}"
 	@echo "  make build-docker       Build the Docker image"
